qt-restricted-extras/qscintilla6/gen_qscilexerd.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QsciLexerD QsciLexerD;
typedef struct QsciScintilla QsciScintilla;
QsciLexerD* QsciLexerD_new();
QsciLexerD* QsciLexerD_new2(QObject* parent);
QMetaObject* QsciLexerD_metaObject(const QsciLexerD* self);
void* QsciLexerD_metacast(QsciLexerD* self, const char* param1);
int QsciLexerD_metacall(QsciLexerD* self, int param1, int param2, void** param3);
struct miqt_string QsciLexerD_tr(const char* s);
const char* QsciLexerD_language(const QsciLexerD* self);
const char* QsciLexerD_lexer(const QsciLexerD* self);
struct miqt_array /* of struct miqt_string */  QsciLexerD_autoCompletionWordSeparators(const QsciLexerD* self);
const char* QsciLexerD_blockEnd(const QsciLexerD* self);
const char* QsciLexerD_blockStart(const QsciLexerD* self);
const char* QsciLexerD_blockStartKeyword(const QsciLexerD* self);
int QsciLexerD_braceStyle(const QsciLexerD* self);
const char* QsciLexerD_wordCharacters(const QsciLexerD* self);
QColor* QsciLexerD_defaultColor(const QsciLexerD* self, int style);
bool QsciLexerD_defaultEolFill(const QsciLexerD* self, int style);
QFont* QsciLexerD_defaultFont(const QsciLexerD* self, int style);
QColor* QsciLexerD_defaultPaper(const QsciLexerD* self, int style);
const char* QsciLexerD_keywords(const QsciLexerD* self, int set);
struct miqt_string QsciLexerD_description(const QsciLexerD* self, int style);
void QsciLexerD_refreshProperties(QsciLexerD* self);
bool QsciLexerD_foldAtElse(const QsciLexerD* self);
bool QsciLexerD_foldComments(const QsciLexerD* self);
bool QsciLexerD_foldCompact(const QsciLexerD* self);
void QsciLexerD_setFoldAtElse(QsciLexerD* self, bool fold);
void QsciLexerD_setFoldComments(QsciLexerD* self, bool fold);
void QsciLexerD_setFoldCompact(QsciLexerD* self, bool fold);
struct miqt_string QsciLexerD_tr2(const char* s, const char* c);
struct miqt_string QsciLexerD_tr3(const char* s, const char* c, int n);
const char* QsciLexerD_blockEnd1(const QsciLexerD* self, int* style);
const char* QsciLexerD_blockStart1(const QsciLexerD* self, int* style);
const char* QsciLexerD_blockStartKeyword1(const QsciLexerD* self, int* style);
bool QsciLexerD_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QsciLexerD_virtualbase_metaObject(const void* self);
bool QsciLexerD_override_virtual_metacast(void* self, intptr_t slot);
void* QsciLexerD_virtualbase_metacast(void* self, const char* param1);
bool QsciLexerD_override_virtual_metacall(void* self, intptr_t slot);
int QsciLexerD_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QsciLexerD_override_virtual_setFoldAtElse(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setFoldAtElse(void* self, bool fold);
bool QsciLexerD_override_virtual_setFoldComments(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setFoldComments(void* self, bool fold);
bool QsciLexerD_override_virtual_setFoldCompact(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setFoldCompact(void* self, bool fold);
bool QsciLexerD_override_virtual_language(void* self, intptr_t slot);
bool QsciLexerD_override_virtual_lexer(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_lexer(const void* self);
bool QsciLexerD_override_virtual_lexerId(void* self, intptr_t slot);
int QsciLexerD_virtualbase_lexerId(const void* self);
bool QsciLexerD_override_virtual_autoCompletionFillups(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_autoCompletionFillups(const void* self);
bool QsciLexerD_override_virtual_autoCompletionWordSeparators(void* self, intptr_t slot);
struct miqt_array /* of struct miqt_string */  QsciLexerD_virtualbase_autoCompletionWordSeparators(const void* self);
bool QsciLexerD_override_virtual_blockEnd(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_blockEnd(const void* self, int* style);
bool QsciLexerD_override_virtual_blockLookback(void* self, intptr_t slot);
int QsciLexerD_virtualbase_blockLookback(const void* self);
bool QsciLexerD_override_virtual_blockStart(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_blockStart(const void* self, int* style);
bool QsciLexerD_override_virtual_blockStartKeyword(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_blockStartKeyword(const void* self, int* style);
bool QsciLexerD_override_virtual_braceStyle(void* self, intptr_t slot);
int QsciLexerD_virtualbase_braceStyle(const void* self);
bool QsciLexerD_override_virtual_caseSensitive(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_caseSensitive(const void* self);
bool QsciLexerD_override_virtual_color(void* self, intptr_t slot);
QColor* QsciLexerD_virtualbase_color(const void* self, int style);
bool QsciLexerD_override_virtual_eolFill(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_eolFill(const void* self, int style);
bool QsciLexerD_override_virtual_font(void* self, intptr_t slot);
QFont* QsciLexerD_virtualbase_font(const void* self, int style);
bool QsciLexerD_override_virtual_indentationGuideView(void* self, intptr_t slot);
int QsciLexerD_virtualbase_indentationGuideView(const void* self);
bool QsciLexerD_override_virtual_keywords(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_keywords(const void* self, int set);
bool QsciLexerD_override_virtual_defaultStyle(void* self, intptr_t slot);
int QsciLexerD_virtualbase_defaultStyle(const void* self);
bool QsciLexerD_override_virtual_description(void* self, intptr_t slot);
bool QsciLexerD_override_virtual_paper(void* self, intptr_t slot);
QColor* QsciLexerD_virtualbase_paper(const void* self, int style);
bool QsciLexerD_override_virtual_defaultColorWithStyle(void* self, intptr_t slot);
QColor* QsciLexerD_virtualbase_defaultColorWithStyle(const void* self, int style);
bool QsciLexerD_override_virtual_defaultEolFill(void* self, intptr_t slot);
bool QsciLexerD_virtualbase_defaultEolFill(const void* self, int style);
bool QsciLexerD_override_virtual_defaultFontWithStyle(void* self, intptr_t slot);
QFont* QsciLexerD_virtualbase_defaultFontWithStyle(const void* self, int style);
bool QsciLexerD_override_virtual_defaultPaperWithStyle(void* self, intptr_t slot);
QColor* QsciLexerD_virtualbase_defaultPaperWithStyle(const void* self, int style);
bool QsciLexerD_override_virtual_setEditor(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setEditor(void* self, QsciScintilla* editor);
bool QsciLexerD_override_virtual_refreshProperties(void* self, intptr_t slot);
void QsciLexerD_virtualbase_refreshProperties(void* self);
bool QsciLexerD_override_virtual_styleBitsNeeded(void* self, intptr_t slot);
int QsciLexerD_virtualbase_styleBitsNeeded(const void* self);
bool QsciLexerD_override_virtual_wordCharacters(void* self, intptr_t slot);
const char* QsciLexerD_virtualbase_wordCharacters(const void* self);
bool QsciLexerD_override_virtual_setAutoIndentStyle(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setAutoIndentStyle(void* self, int autoindentstyle);
bool QsciLexerD_override_virtual_setColor(void* self, intptr_t slot);
void QsciLexerD_virtualbase_setColor(void* self, QColor* c, int style);