qt-restricted-extras/qscintilla6/gen_qscilexerd.nim


proc fcQsciLexerD_new(): ptr cQsciLexerD {.importc: "QsciLexerD_new".}
proc fcQsciLexerD_new2(parent: pointer): ptr cQsciLexerD {.importc: "QsciLexerD_new2".}
proc fcQsciLexerD_metaObject(self: pointer, ): pointer {.importc: "QsciLexerD_metaObject".}
proc fcQsciLexerD_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciLexerD_metacast".}
proc fcQsciLexerD_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciLexerD_metacall".}
proc fcQsciLexerD_tr(s: cstring): struct_miqt_string {.importc: "QsciLexerD_tr".}
proc fcQsciLexerD_language(self: pointer, ): cstring {.importc: "QsciLexerD_language".}
proc fcQsciLexerD_lexer(self: pointer, ): cstring {.importc: "QsciLexerD_lexer".}
proc fcQsciLexerD_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array {.importc: "QsciLexerD_autoCompletionWordSeparators".}
proc fcQsciLexerD_blockEnd(self: pointer, ): cstring {.importc: "QsciLexerD_blockEnd".}
proc fcQsciLexerD_blockStart(self: pointer, ): cstring {.importc: "QsciLexerD_blockStart".}
proc fcQsciLexerD_blockStartKeyword(self: pointer, ): cstring {.importc: "QsciLexerD_blockStartKeyword".}
proc fcQsciLexerD_braceStyle(self: pointer, ): cint {.importc: "QsciLexerD_braceStyle".}
proc fcQsciLexerD_wordCharacters(self: pointer, ): cstring {.importc: "QsciLexerD_wordCharacters".}
proc fcQsciLexerD_defaultColor(self: pointer, style: cint): pointer {.importc: "QsciLexerD_defaultColor".}
proc fcQsciLexerD_defaultEolFill(self: pointer, style: cint): bool {.importc: "QsciLexerD_defaultEolFill".}
proc fcQsciLexerD_defaultFont(self: pointer, style: cint): pointer {.importc: "QsciLexerD_defaultFont".}
proc fcQsciLexerD_defaultPaper(self: pointer, style: cint): pointer {.importc: "QsciLexerD_defaultPaper".}
proc fcQsciLexerD_keywords(self: pointer, set: cint): cstring {.importc: "QsciLexerD_keywords".}
proc fcQsciLexerD_description(self: pointer, style: cint): struct_miqt_string {.importc: "QsciLexerD_description".}
proc fcQsciLexerD_refreshProperties(self: pointer, ): void {.importc: "QsciLexerD_refreshProperties".}
proc fcQsciLexerD_foldAtElse(self: pointer, ): bool {.importc: "QsciLexerD_foldAtElse".}
proc fcQsciLexerD_foldComments(self: pointer, ): bool {.importc: "QsciLexerD_foldComments".}
proc fcQsciLexerD_foldCompact(self: pointer, ): bool {.importc: "QsciLexerD_foldCompact".}
proc fcQsciLexerD_setFoldAtElse(self: pointer, fold: bool): void {.importc: "QsciLexerD_setFoldAtElse".}
proc fcQsciLexerD_setFoldComments(self: pointer, fold: bool): void {.importc: "QsciLexerD_setFoldComments".}
proc fcQsciLexerD_setFoldCompact(self: pointer, fold: bool): void {.importc: "QsciLexerD_setFoldCompact".}
proc fcQsciLexerD_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciLexerD_tr2".}
proc fcQsciLexerD_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciLexerD_tr3".}
proc fcQsciLexerD_blockEnd1(self: pointer, style: ptr cint): cstring {.importc: "QsciLexerD_blockEnd1".}
proc fcQsciLexerD_blockStart1(self: pointer, style: ptr cint): cstring {.importc: "QsciLexerD_blockStart1".}
proc fcQsciLexerD_blockStartKeyword1(self: pointer, style: ptr cint): cstring {.importc: "QsciLexerD_blockStartKeyword1".}
proc fQsciLexerD_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QsciLexerD_virtualbase_metaObject".}
proc fcQsciLexerD_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_metaObject".}
proc fQsciLexerD_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QsciLexerD_virtualbase_metacast".}
proc fcQsciLexerD_override_virtual_metacast(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_metacast".}
proc fQsciLexerD_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QsciLexerD_virtualbase_metacall".}
proc fcQsciLexerD_override_virtual_metacall(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_metacall".}
proc fQsciLexerD_virtualbase_setFoldAtElse(self: pointer, fold: bool): void{.importc: "QsciLexerD_virtualbase_setFoldAtElse".}
proc fcQsciLexerD_override_virtual_setFoldAtElse(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setFoldAtElse".}
proc fQsciLexerD_virtualbase_setFoldComments(self: pointer, fold: bool): void{.importc: "QsciLexerD_virtualbase_setFoldComments".}
proc fcQsciLexerD_override_virtual_setFoldComments(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setFoldComments".}
proc fQsciLexerD_virtualbase_setFoldCompact(self: pointer, fold: bool): void{.importc: "QsciLexerD_virtualbase_setFoldCompact".}
proc fcQsciLexerD_override_virtual_setFoldCompact(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setFoldCompact".}
proc fcQsciLexerD_override_virtual_language(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_language".}
proc fQsciLexerD_virtualbase_lexer(self: pointer, ): cstring{.importc: "QsciLexerD_virtualbase_lexer".}
proc fcQsciLexerD_override_virtual_lexer(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_lexer".}
proc fQsciLexerD_virtualbase_lexerId(self: pointer, ): cint{.importc: "QsciLexerD_virtualbase_lexerId".}
proc fcQsciLexerD_override_virtual_lexerId(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_lexerId".}
proc fQsciLexerD_virtualbase_autoCompletionFillups(self: pointer, ): cstring{.importc: "QsciLexerD_virtualbase_autoCompletionFillups".}
proc fcQsciLexerD_override_virtual_autoCompletionFillups(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_autoCompletionFillups".}
proc fQsciLexerD_virtualbase_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array{.importc: "QsciLexerD_virtualbase_autoCompletionWordSeparators".}
proc fcQsciLexerD_override_virtual_autoCompletionWordSeparators(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_autoCompletionWordSeparators".}
proc fQsciLexerD_virtualbase_blockEnd(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerD_virtualbase_blockEnd".}
proc fcQsciLexerD_override_virtual_blockEnd(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_blockEnd".}
proc fQsciLexerD_virtualbase_blockLookback(self: pointer, ): cint{.importc: "QsciLexerD_virtualbase_blockLookback".}
proc fcQsciLexerD_override_virtual_blockLookback(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_blockLookback".}
proc fQsciLexerD_virtualbase_blockStart(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerD_virtualbase_blockStart".}
proc fcQsciLexerD_override_virtual_blockStart(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_blockStart".}
proc fQsciLexerD_virtualbase_blockStartKeyword(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerD_virtualbase_blockStartKeyword".}
proc fcQsciLexerD_override_virtual_blockStartKeyword(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_blockStartKeyword".}
proc fQsciLexerD_virtualbase_braceStyle(self: pointer, ): cint{.importc: "QsciLexerD_virtualbase_braceStyle".}
proc fcQsciLexerD_override_virtual_braceStyle(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_braceStyle".}
proc fQsciLexerD_virtualbase_caseSensitive(self: pointer, ): bool{.importc: "QsciLexerD_virtualbase_caseSensitive".}
proc fcQsciLexerD_override_virtual_caseSensitive(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_caseSensitive".}
proc fQsciLexerD_virtualbase_color(self: pointer, style: cint): pointer{.importc: "QsciLexerD_virtualbase_color".}
proc fcQsciLexerD_override_virtual_color(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_color".}
proc fQsciLexerD_virtualbase_eolFill(self: pointer, style: cint): bool{.importc: "QsciLexerD_virtualbase_eolFill".}
proc fcQsciLexerD_override_virtual_eolFill(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_eolFill".}
proc fQsciLexerD_virtualbase_font(self: pointer, style: cint): pointer{.importc: "QsciLexerD_virtualbase_font".}
proc fcQsciLexerD_override_virtual_font(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_font".}
proc fQsciLexerD_virtualbase_indentationGuideView(self: pointer, ): cint{.importc: "QsciLexerD_virtualbase_indentationGuideView".}
proc fcQsciLexerD_override_virtual_indentationGuideView(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_indentationGuideView".}
proc fQsciLexerD_virtualbase_keywords(self: pointer, set: cint): cstring{.importc: "QsciLexerD_virtualbase_keywords".}
proc fcQsciLexerD_override_virtual_keywords(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_keywords".}
proc fQsciLexerD_virtualbase_defaultStyle(self: pointer, ): cint{.importc: "QsciLexerD_virtualbase_defaultStyle".}
proc fcQsciLexerD_override_virtual_defaultStyle(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_defaultStyle".}
proc fcQsciLexerD_override_virtual_description(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_description".}
proc fQsciLexerD_virtualbase_paper(self: pointer, style: cint): pointer{.importc: "QsciLexerD_virtualbase_paper".}
proc fcQsciLexerD_override_virtual_paper(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_paper".}
proc fQsciLexerD_virtualbase_defaultColorWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerD_virtualbase_defaultColorWithStyle".}
proc fcQsciLexerD_override_virtual_defaultColorWithStyle(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_defaultColorWithStyle".}
proc fQsciLexerD_virtualbase_defaultEolFill(self: pointer, style: cint): bool{.importc: "QsciLexerD_virtualbase_defaultEolFill".}
proc fcQsciLexerD_override_virtual_defaultEolFill(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_defaultEolFill".}
proc fQsciLexerD_virtualbase_defaultFontWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerD_virtualbase_defaultFontWithStyle".}
proc fcQsciLexerD_override_virtual_defaultFontWithStyle(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_defaultFontWithStyle".}
proc fQsciLexerD_virtualbase_defaultPaperWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerD_virtualbase_defaultPaperWithStyle".}
proc fcQsciLexerD_override_virtual_defaultPaperWithStyle(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_defaultPaperWithStyle".}
proc fQsciLexerD_virtualbase_setEditor(self: pointer, editor: pointer): void{.importc: "QsciLexerD_virtualbase_setEditor".}
proc fcQsciLexerD_override_virtual_setEditor(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setEditor".}
proc fQsciLexerD_virtualbase_refreshProperties(self: pointer, ): void{.importc: "QsciLexerD_virtualbase_refreshProperties".}
proc fcQsciLexerD_override_virtual_refreshProperties(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_refreshProperties".}
proc fQsciLexerD_virtualbase_styleBitsNeeded(self: pointer, ): cint{.importc: "QsciLexerD_virtualbase_styleBitsNeeded".}
proc fcQsciLexerD_override_virtual_styleBitsNeeded(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_styleBitsNeeded".}
proc fQsciLexerD_virtualbase_wordCharacters(self: pointer, ): cstring{.importc: "QsciLexerD_virtualbase_wordCharacters".}
proc fcQsciLexerD_override_virtual_wordCharacters(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_wordCharacters".}
proc fQsciLexerD_virtualbase_setAutoIndentStyle(self: pointer, autoindentstyle: cint): void{.importc: "QsciLexerD_virtualbase_setAutoIndentStyle".}
proc fcQsciLexerD_override_virtual_setAutoIndentStyle(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setAutoIndentStyle".}
proc fQsciLexerD_virtualbase_setColor(self: pointer, c: pointer, style: cint): void{.importc: "QsciLexerD_virtualbase_setColor".}
proc fcQsciLexerD_override_virtual_setColor(self: pointer, slot: int) {.importc: "QsciLexerD_override_virtual_setColor".}
